<resources>
    <string name="app_name">Smart Calendar</string>

    <string name="Day">TODAY</string>
    <string name="Date"> Date : Month : Year </string>
    <string name="task">Show Task list </string>
    <string name="add"> ADD Task</string>

    <string name="login_First"> Welcome </string>
    <string name="Enter_Email">Enter Your  Email</string>
    <string name="Enter_password"> Enter Your password</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">Already Signed Up? Login Now</string>
    <string name="login">Login</string>
    <string name="signUpPage">Don\'t have an account? Sign up here</string>
    <string name="login_page">Login Page</string>
    <string name="sign_up_page">SIGN UP</string>
    <string name="logout">Logout</string>
    <string name="enter_name">Enter Name:</string>
    <string name="accountContinue">Continue</string>
    <string name="enter_age">Enter Age:</string>
    <string name="add_task_page">Add Task Page</string>
    <string name="Repeat_Password">Repeat Your Password</string>
    <string name="Repeat_Email">Repeat Your Email</string>

    <string name="tvTaskId">Task List</string>

    <string name="tasks">Tasks</string>
    <string name="task_no">Task No</string>
    <string name="delete">Delete</string>
    <string name="save_task">Save task</string>
    <string name="choose_new_date">Choose New Date</string>
    <string name="choose_new_time">Choose New Time</string>
    <string name="new_task_name">New Task Name :</string>
    <string name="textView">TextView</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="enter_task_name">Enter Task Name :</string>
    <string name="select_task_for_details">Select Task for Details</string>
    <string name="task_name">Task Name :</string>
    <string name="task_name_search">Task Name :</string>
    <string name="search">Search</string>
    <string name="sign_in_page">SIGN IN</string>

</resources>
