<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:text="SIGN IN"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText

        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="152dp"
        android:layout_marginBottom="20dp"
        android:background="#DBDBCB"
        android:drawableStart="@drawable/user_mail"
        android:hint="@string/Enter_Email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="#1A032B"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/signInPassword"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#DBDBCB"
        android:drawableStart="@drawable/password_icon"
        android:ems="10"
        android:hint="@string/Enter_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/enter_button_icon"
        android:text="@string/login" />

    <TextView
        android:id="@+id/signUpInstead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/signUpPage"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textStyle="italic" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp" />

</LinearLayout>