<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <TextView
        android:id="@+id/enterAccountName"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="108dp"
        android:fontFamily="serif"
        android:text="@string/enter_name"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/accountName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/accountName"
        android:layout_width="181dp"
        android:layout_height="44dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterAccountAge"
        android:layout_width="101dp"
        android:layout_height="37dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="84dp"
        android:fontFamily="serif"
        android:text="@string/enter_age"
        app:layout_constraintEnd_toStartOf="@+id/accountAge"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterAccountName" />

    <EditText
        android:id="@+id/accountAge"
        android:layout_width="179dp"
        android:layout_height="49dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountName" />

    <Button
        android:id="@+id/accountContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="200dp"
        android:text="@string/accountContinue"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>